--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,15 +1,28 @@
 <div class="container-fluid">
     <div class="search-container row">
         <div class="form-group col-5">
+
             <label>{{ text }}</label>
             <div class="search">
                 <input type="text" class="form-control" [formControl]="searchControl">
                 <button class="btn btn-dark" [disabled]="!searchControl.valid" (click)="doSearch()">Pesquisar</button>
             </div>
+
         </div>
 
         <div class="form-group">
             <label>Pesquisar com <i>autocomplete</i></label>
         </div>
     </div>
+
+    <ag-loader *ngIf="loading$ | async"></ag-loader>
+
+    <div *ngIf="!(loading$ | async) && !(error$ | async) && !!(cityWeather$ | async)">
+        <ag-current-weather [cityWeather]="(cityWeather$ | async)!"></ag-current-weather>
+    </div>
+
+    <div *ngIf="!(loading$ | async) && (error$ | async)">
+        <a>Tentar novamente</a>
+    </div>
+
 </div>
