--- a/src/app/pages/home/components/current-weather/current-weather.component.html
+++ b/src/app/pages/home/components/current-weather/current-weather.component.html
@@ -5,8 +5,8 @@
         <ag-detailed-weather [weather]="cityWeather.weather"></ag-detailed-weather>
 
         <div class="card-actions">
-            <a class="card-link" (click)="toggleBookmark()">
-                Adicionar aos favoritos
+            <a class="card-link" (click)="onToggleBookmark()">
+                {{ isFavorite ? 'Remover dos favoritos' : 'Adicionar aos favoritos' }}
             </a>
             <a class="card-link" routerLink="/details">
                 Ver Detalhes
