Create details module/component

--- a/src/app/pages/bookmarks/containers/bookmarks/bookmarks.page.html
+++ b/src/app/pages/bookmarks/containers/bookmarks/bookmarks.page.html
@@ -11,9 +11,7 @@
                 <a [routerLink]="['../details']" [queryParams]="{lat:bookmark.coord.lat, lon: bookmark.coord.lon}">
                     {{ bookmark.name }}
                 </a>
-                <button class="btn btn-outline-dark btn-sm" (click)="removeBookmark(bookmark.id)">
-                    X
-                </button>
+                <button class="btn btn-outline-dark btn-sm" (click)="removeBookmark(bookmark.id)">X</button>
             </li>
         </ul>
     </div>
