--- a/src/app/pages/details/containers/details/details.page.html
+++ b/src/app/pages/details/containers/details/details.page.html
@@ -1,1 +1,19 @@
-<p>details works!</p>
+<div class="container-fluid">
+
+    <ag-loader *ngIf="loading$ | async; else notLoading"></ag-loader>
+
+    <ng-template #notLoading>
+        <ng-container *ngIf="!(error$ | async)">
+            <h1>{{ (details$ | async)!.city.name }}, {{ (details$ | async)!.city.country }}</h1>
+
+            <div class="card current-card">
+                <ag-detailed-weather [weather]="(details$ | async)!.current" [unit]="(unit$ | async)!"></ag-detailed-weather>
+            </div>
+
+            <ag-daily-weather *ngFor="let daily of (details$ | async)!.daily" [dailyWeather]="daily" [timeZone]="(details$ | async)!.city.timeZone" [unit]="(unit$ | async)!"></ag-daily-weather>
+        </ng-container>
+
+        <div *ngIf="error$ | async">Erro</div>
+    </ng-template>
+
+</div>
