--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
     <div class="row">
         <div class="col-sm-3 bg-light border-right">
             <ul class="nav flex-column">
-                <li class="nav nav-item">
+                <li class="nav-item">
                     <a routerLink="/" class="nav-link">Início</a>
                 </li>
-                <li class="nav nav-item">
+                <li class="nav-item">
                     <a routerLink="/bookmarks" class="nav-link">Favoritos</a>
                 </li>
             </ul>
