--- a/src/app/pages/bookmarks/containers/bookmarks/bookmarks.page.html
+++ b/src/app/pages/bookmarks/containers/bookmarks/bookmarks.page.html
@@ -3,20 +3,22 @@
 
         <div>
             <h3>Favoritos</h3>
-            <div *ngIf="!(bookmarks$ | async)!.length">Nenhum favorito adicionado</div>
-        </div>
 
-        <ul class="list-unstyled">
-            <li *ngFor="let bookmark of (bookmarks$ | async)">
-                <a [routerLink]="['../details']" [queryParams]="{lat:bookmark.coord.lat, lon: bookmark.coord.lon}">
+            <div *ngIf="!(bookmarks$ | async)!.length">Nenhum favorito adicionado</div>
+
+            <ul class="list-unstyled">
+                <li *ngFor="let bookmark of (bookmarks$ | async)">
+                    <a [routerLink]="['../details']" [queryParams]="{lat:bookmark.coord.lat, lon: bookmark.coord.lon}">
                     {{ bookmark.name }}
                 </a>
-                <button class="btn btn-outline-dark btn-sm" (click)="removeBookmark(bookmark.id)">X</button>
-            </li>
-        </ul>
-    </div>
+                    <button class="btn btn-outline-dark btn-sm" (click)="removeBookmark(bookmark.id)">X</button>
+                </li>
+            </ul>
+        </div>
 
-    <div>
-        <label>Adicionar cidade aos favoritos</label>
+        <div>
+            <label>Adicionar cidade aos favoritos</label>
+            <ag-cities-typeahead [formControl]="searchTypeaheadControl"></ag-cities-typeahead>
+        </div>
     </div>
 </div>
