--- a/src/app/pages/home/containers/home/home.page.html
+++ b/src/app/pages/home/containers/home/home.page.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
     <div class="search-container row">
+
         <div class="form-group col-5">
             <label>{{ text }}</label>
             <div class="search">
@@ -7,15 +8,20 @@
                 <button class="btn btn-dark" [disabled]="!searchControl.valid" (click)="doSearch()">Pesquisar</button>
             </div>
         </div>
+
         <div class="form-group">
             <label>Pesquisar com <i>autocomplete</i></label>
+            <ag-cities-typeahead [formControl]="searchControlWithAutocomplete"></ag-cities-typeahead>
         </div>
     </div>
+
     <ag-loader *ngIf="loading$ | async"></ag-loader>
     <div *ngIf="!(loading$ | async) && !(error$ | async) && !!cityWeather">
         <ag-current-weather [cityWeather]="cityWeather!" [isFavorite]="(isCurrentFavorite$ | async)!" (toggleBookmark)="onToggleBookmark()"></ag-current-weather>
     </div>
+
     <div *ngIf="!(loading$ | async) && (error$ | async)">
         <a>Tentar novamente</a>
     </div>
+
 </div>
