--- a/src/app/pages/home/containers/unit-selector/unit-selector.component.html
+++ b/src/app/pages/home/containers/unit-selector/unit-selector.component.html
@@ -2,13 +2,13 @@
     <span>Unidade:</span>
     <ul class="list-inline">
         <li class="list-inline-item" (click)="updateUnit(unitsEnum.Metric)">
-            <a class="badge" [ngClass]="unit === unitsEnum.Metric ? 'badge-primary' : 'badge-dark'">˚C</a>
+            <a class="badge" [ngClass]="unit === unitsEnum.Metric ? 'badge-primary' : 'bg-dark'">˚C</a>
         </li>
         <li class="list-inline-item" (click)="updateUnit(unitsEnum.Imperial)">
-            <a class="badge" [ngClass]="(unit$ | async) === unitsEnum.Imperial ? 'badge-primary' : 'badge-dark'">˚F</a>
+            <a class="badge" [ngClass]="(unit$ | async) === unitsEnum.Imperial ? 'badge-primary' : 'bg-dark'">˚F</a>
         </li>
         <li class="list-inline-item" (click)="updateUnit(unitsEnum.SI)">
-            <a class="badge" [ngClass]="(unit$ | async) === unitsEnum.SI ? 'badge-primary' : 'badge-dark'">K</a>
+            <a class="badge" [ngClass]="(unit$ | async) === unitsEnum.SI ? 'badge-primary' : 'bg-dark'">K</a>
         </li>
     </ul>
 </div>
