--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,3 +55,8 @@ a:not([href]):hover {
         -webkit-transform: scale(1.0);
     }
 }
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
+
+/* Importing Datepicker SCSS file. */
+@import "~ngx-bootstrap/datepicker/bs-datepicker";
