--- a/src/app/shared/components/detailed-weather/detailed-weather.component.html
+++ b/src/app/shared/components/detailed-weather/detailed-weather.component.html
@@ -6,13 +6,12 @@
     </div>
 
     <div class="weather-temp">
-        <h2>{{ weather.temp }} {{ unitSymbol }}
-        </h2>
+        <h2>{{ weather.temp }} {{ unitSymbol }}</h2>
         <span>Sensação térmica: {{ weather.feelsLike }} {{ unitSymbol }}</span>
     </div>
 
     <div class="weather-misc">
-        <div>Humidade: {{ weather.humidity }}%</div>
+        <div>Humidade: {{ weather.humidity }} %</div>
         <div>Velocidade do vento: {{ weather.wind.speed }} m/s</div>
     </div>
 
