--- a/src/app/pages/home/containers/unit-selector/unit-selector.component.html
+++ b/src/app/pages/home/containers/unit-selector/unit-selector.component.html
@@ -1,14 +1,14 @@
-<div>
+<div class="me-3">
     <span>Unidade:</span>
     <ul class="list-inline">
         <li class="list-inline-item" (click)="updateUnit(unitsEnum.Metric)">
-            <a class="badge" [ngClass]="unit === unitsEnum.Metric ? 'badge-primary' : 'bg-dark'">˚C</a>
+            <a class="badge" [ngClass]="unit === unitsEnum.Metric ? 'btn-primary' : 'btn-dark'">˚C</a>
         </li>
         <li class="list-inline-item" (click)="updateUnit(unitsEnum.Imperial)">
-            <a class="badge" [ngClass]="(unit$ | async) === unitsEnum.Imperial ? 'badge-primary' : 'bg-dark'">˚F</a>
+            <a class="badge" [ngClass]="(unit$ | async)! === unitsEnum.Imperial ? 'btn-primary' : 'btn-dark'">˚F</a>
         </li>
         <li class="list-inline-item" (click)="updateUnit(unitsEnum.SI)">
-            <a class="badge" [ngClass]="(unit$ | async) === unitsEnum.SI ? 'badge-primary' : 'bg-dark'">K</a>
+            <a class="badge" [ngClass]="(unit$ | async)! === unitsEnum.SI ? 'btn-primary' : 'btn-dark'">K</a>
         </li>
     </ul>
 </div>
